[gd_scene load_steps=12 format=2]

[ext_resource path="res://Asset/Resource/d1.png" type="Texture" id=1]
[ext_resource path="res://Asset/Scripts/炸弹人模块.gd" type="Script" id=2]
[ext_resource path="res://Asset/Resource/d2.png" type="Texture" id=3]
[ext_resource path="res://Asset/Resource/d3.png" type="Texture" id=4]
[ext_resource path="res://Asset/Resource/c.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "行走"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "静止"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ) ]
}

[sub_resource type="Curve" id=5]
max_value = 4.0
_data = [ Vector2( 0, 3.12727 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.309091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.0111732, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.537255 )

[node name="炸弹人模块" type="Area2D"]
scale = Vector2( 3, 3 )
z_index = 1
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "行走"
anims/RESET = SubResource( 2 )
"anims/行走" = SubResource( 3 )
"anims/静止" = SubResource( 4 )

[node name="VFX_explore" type="CPUParticles2D" parent="."]
scale = Vector2( 2, 2 )
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 72.0
scale_amount_curve = SubResource( 5 )
color = Color( 0.329412, 0.905882, 0.866667, 1 )
color_ramp = SubResource( 6 )

[node name="SFX_die" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
